[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Fonts/Fonts.tres" type="DynamicFont" id=1]
[ext_resource path="res://Entities/GUI/GUI.gd" type="Script" id=3]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="PanelLeft" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 145.0
margin_right = 84.0
margin_bottom = 154.0
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="PanelLeft"]
margin_left = 136.509
margin_top = -121.736
margin_right = 176.509
margin_bottom = -111.736
custom_fonts/font = ExtResource( 1 )
text = "$NOME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stamina" type="ColorRect" parent="PanelLeft"]
margin_left = 1.0
margin_top = 1.0
margin_right = 73.0
margin_bottom = 8.0
color = Color( 0.901961, 1, 0.541176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelMid2" type="ColorRect" parent="."]
margin_left = 111.318
margin_top = 0.37735
margin_right = 227.318
margin_bottom = 37.3773
color = Color( 0, 0, 0, 0.517647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelMid" type="ColorRect" parent="PanelMid2"]
margin_left = 18.2343
margin_right = 90.2343
margin_bottom = 20.0
color = Color( 0, 0, 0, 0.517647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamName" type="Label" parent="PanelMid2/PanelMid"]
margin_left = -9.65219
margin_top = 5.92745
margin_right = -3.65219
margin_bottom = 15.9274
custom_fonts/font = ExtResource( 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamName2" type="Label" parent="PanelMid2/PanelMid"]
margin_left = 77.4519
margin_top = 6.0
margin_right = 83.4519
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "B"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamName3" type="Label" parent="PanelMid2/PanelMid"]
margin_left = 34.2079
margin_top = 6.0
margin_right = 40.2079
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamBPoints" type="Label" parent="PanelMid2/PanelMid"]
margin_left = 53.7701
margin_top = 4.84242
margin_right = 59.7701
margin_bottom = 14.8424
custom_fonts/font = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamAPoints" type="Label" parent="PanelMid2/PanelMid"]
margin_left = 13.9624
margin_top = 4.84242
margin_right = 19.9624
margin_bottom = 14.8424
custom_fonts/font = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
